# controllers/Produto.js
@@ -3,9 +3,9 @@
 var utils = require('../utils/writer.js');
 var Produto = require('../service/ProdutoService');
 
-module.exports.adicinonarProduto = function adicinonarProduto (req, res, next) {
+module.exports.adicionarProduto = function adicionarProduto (req, res, next) {
   var produto_ = req.swagger.params['produto_'].value;
-  Produto.adicinonarProduto(produto_)
+  Produto.adicionarProduto(produto_)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -18,10 +18,10 @@ module.exports.apagarProdutoId = function apagarProdutoId (req, res, next) {
   var id_produto = req.swagger.params['id_produto'].value;
   Produto.apagarProdutoId(id_produto)
     .then(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res, "Apagado", response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res, "Produto não encontrado", response);
     });
 };
 
@@ -36,20 +36,8 @@ module.exports.atualizarProduto = function atualizarProduto (req, res, next) {
     });
 };
 
-module.exports.encontrarProdutoDisp = function encontrarProdutoDisp (req, res, next) {
-  var disp = req.swagger.params['disp'].value;
-  Produto.encontrarProdutoDisp(disp)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.encontrarProdutoId = function encontrarProdutoId (req, res, next) {
-  var id_produto = req.swagger.params['id_produto'].value;
-  Produto.encontrarProdutoId(id_produto)
+module.exports.mostrarProduto = function mostrarProduto (req, res, next) {
+  Produto.mostrarProduto()
     .then(function (response) {
       utils.writeJson(res, response);
     })
